# burrow

./: .dockerignore  .gitignore  .goreleaser.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml  deploy.yml  release.yml  tauri-release.yml
cmd/burrow/: main.go
cmd/burrow-server/: main.go
docs/superpowers/plans/: 2026-03-13-wave1-foundation.md
internal/client/: client.go  daemon.go  diagnose.go  diagnose_test.go  tunnel.go
internal/client/killswitch/: darwin.go
internal/server/: api.go  api_test.go  auth.go  config.go  integration_test.go  logbuffer.go  logbuffer_test.go  relay_test.go  server.go  transport.go
internal/server/store/: sqlite.go  sqlite_test.go  store.go
internal/shared/: crypto.go  crypto_test.go  invite.go  invite_test.go  version.go
scripts/: generate-tauri-keys.sh  install.sh
web/admin/: package-lock.json  package.json
web/admin/src/: app.css  app.html
web/admin/src/lib/: api.test.ts  api.ts
web/admin/src/routes/: +layout.svelte  +page.svelte
web/client/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/client/src/: app.css
web/client/src-tauri/: Cargo.toml  tauri.conf.json
web/client/src-tauri/capabilities/: default.json
web/client/src-tauri/icons/: icon.icns
web/client/src-tauri/src/: lib.rs  main.rs
web/client/src/__mocks__/: tauri-api-core.ts
web/client/src/lib/: api.test.ts  api.ts  i18n.svelte.ts  i18n.test.ts  stores.svelte.ts
web/client/src/routes/: +layout.svelte  +page.svelte
(+6 files in other folders)
